fix: move svg icons in badge macros to background images
Moves the SVG elements in the badge macros to background images in CSS

fix #3385

--- a/client/src/document/organisms/sidebar/index.scss
+++ b/client/src/document/organisms/sidebar/index.scss
@@ -54,4 +54,12 @@
   .experimental-icon {
     background-image: url("~@mdn/dinocons/general/flask.svg");
   }
+
+  .nonstandard-icon {
+    background-image: url("~@mdn/dinocons/emojis/thumbs-down.svg");
+  }
+
+  .deprecated-icon {
+    background-image: url("~@mdn/dinocons/general/trash.svg");
+  }
 }
