--- a/kumascript/macros/InterfaceOverview.ejs
+++ b/kumascript/macros/InterfaceOverview.ejs
@@ -138,7 +138,7 @@ if (slug) {
       NonStandardBadge : await template("NonStandardBadge"),
       DeprecatedBadge : await template("DeprecatedBadge"),
       ObsoleteBadge : await template("ObsoleteBadge"),
-      ReadOnlyBadge : await template("ReadOnlyBadge"),
+      ReadOnlyBadge : await template("ReadOnlyInline"),
     }
 
     // Function to construct one section of the page, given
