remember the chosen sort order

--- a/client/src/translations/index.scss
+++ b/client/src/translations/index.scss
@@ -46,7 +46,7 @@
       font-size: 80%;
     }
     td .document-title-preview {
-      color: rgb(118, 118, 118);
+      // color: rgb(118, 118, 118);
     }
 
     td .last_modified.ahead a {
