change class names and fix kumascript tests

--- a/client/src/document/organisms/sidebar/index.scss
+++ b/client/src/document/organisms/sidebar/index.scss
@@ -52,11 +52,11 @@
     width: 18px;
   }
 
-  .experimental-icon {
+  .icon-experimental {
     color: $primary-50;
   }
 
-  .deprecated-icon {
+  .icon-deprecated {
     color: $red-100;
   }
 }
