--- a/kumascript/macros/DeprecatedBadge.ejs
+++ b/kumascript/macros/DeprecatedBadge.ejs
@@ -10,6 +10,6 @@ var titleAttrValue = mdn.localString({
     "ja"   : "これは非推奨の API です。まだ動作しているかもしれませんが、もう使用するべきではありません。"
 });
 %>
-<svg class="icon deprecated-icon">
+<svg class="icon icon-deprecated" tabindex="0">
     <use xlink:href="/assets/badges.svg#icon-deprecated"></use>
 </svg>
