--- a/kumascript/macros/NonStandardBadge.ejs
+++ b/kumascript/macros/NonStandardBadge.ejs
@@ -13,6 +13,6 @@ var titleAttrValue = mdn.localString({
     "en-US": "This API has not been standardized."
 });
 %>
-<svg class="icon nonstandard-icon">
+<svg class="icon icon-nonstandard" tabindex="0">
     <use xlink:href="/assets/badges.svg#icon-nonstandard"></use>
 </svg>
