--- a/kumascript/macros/ExperimentalBadge.ejs
+++ b/kumascript/macros/ExperimentalBadge.ejs
@@ -12,6 +12,6 @@ var titleAttrValue = mdn.localString({
     "en-US": "This is an experimental API that should not be used in production code."
 });
 %>
-<svg class="icon experimental-icon">
+<svg class="icon icon-experimental" tabindex="0">
     <use xlink:href="/assets/badges.svg#icon-experimental"></use>
 </svg>
