--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -226,8 +226,9 @@
       position: relative;
       h1 {
         margin: 0px;
+        font-size: clamp(40px, calc(4vw * 0.8), 45px);
 
-        @media #{$mq-small-desktop-and-up} {
+        @media #{$mq-mobile-and-up} {
           font-size: clamp(18px, calc(4vw * 0.8), 45px);
           span {
             display: block;
@@ -253,23 +254,23 @@
       background: rgba(227, 24, 135, 0.2);
     }
 
-    .secondary-feature {
+    .main-feature {
       h2 {
         margin-top: 0px;
 
         @media #{$mq-small-desktop-and-up} {
-          margin-top: 47px;
+          margin-top: 24px;
         }
       }
       @media #{$mq-small-desktop-and-up} {
-        height: 260px;
+        height: 310px;
       }
 
       @media #{$mq-large-desktop-and-up} {
-        height: 209px;
+        height: 402px;
       }
 
-      .secondary-feature-wrapper {
+      .main-feature-wrapper {
         position: relative;
         margin: -45px 0px -90px 0px;
 
@@ -284,23 +285,23 @@
       }
     }
 
-    .main-feature {
+    .secondary-feature {
       h2 {
         margin-top: 0px;
 
         @media #{$mq-small-desktop-and-up} {
-          margin-top: 24px;
+          margin-top: 47px;
         }
       }
       @media #{$mq-small-desktop-and-up} {
-        height: 347px;
+        height: 236px;
       }
 
       @media #{$mq-large-desktop-and-up} {
-        height: 402px;
+        height: 209px;
       }
 
-      .main-feature-wrapper {
+      .secondary-feature-wrapper {
         position: relative;
         margin: -45px 0px -90px 0px;
 
@@ -325,10 +326,11 @@
         padding: 0 5%;
 
         h2 {
-          font-size: 24px;
+          font-size: 22px;
 
           @media #{$mq-large-desktop-and-up} {
             margin-top: 7px;
+            font-size: 24px;
           }
         }
 
@@ -346,9 +348,10 @@
         }
 
         p {
-          font-size: clamp(14px, calc(2vw * 0.6), 17px);
+          font-size: clamp(15px, calc(2vw * 0.6), 18px);
+
           @media #{$mq-large-desktop-and-up} {
-            padding-right: 65px;
+            font-size: clamp(17px, calc(2vw * 0.6), 18px);
           }
 
           b {
@@ -384,16 +387,6 @@
           }
         }
 
-        .section-secondary-content {
-          h2 {
-            margin-top: -65px;
-
-            @media #{$mq-small-desktop-and-up} {
-              margin-top: 24px;
-            }
-          }
-        }
-
         .section-main-content {
           padding-bottom: 30px;
           font-size: 16px;
@@ -407,7 +400,11 @@
             padding-left: 20px;
             font-style: italic;
             font-weight: 300;
-            font-size: clamp(14px, calc(2vw * 0.6), 17px);
+            font-size: clamp(15px, calc(2vw * 0.6), 18px);
+
+            @media #{$mq-large-desktop-and-up} {
+              font-size: clamp(17px, calc(2vw * 0.6), 18px);
+            }
           }
 
           li::before {
@@ -431,39 +428,6 @@
           }
         }
 
-        .section-secondary-illustration {
-          .premiumfeatures {
-            height: calc(90vw * 1.1);
-            width: 90vw;
-            position: relative;
-            background-size: cover;
-            margin: 0 auto;
-            position: relative;
-            top: -69px;
-            max-width: 450px;
-            max-height: calc(450px * 1.15);
-            margin-bottom: -24px;
-            background-image: url("./svgs/premiumfeatures.svg");
-
-            @media #{$mq-small-desktop-and-up} {
-              height: calc(450px * 1.11);
-              width: 450px;
-              left: -10px;
-              top: -108px;
-              position: relative;
-              background-size: cover;
-
-              overflow: visible;
-            }
-
-            @media #{$mq-large-desktop-and-up} {
-              height: 464px;
-              width: 417px;
-              top: -78px;
-            }
-          }
-        }
-
         .section-main-illustration {
           .deepdive {
             display: none;
@@ -484,6 +448,53 @@
               height: 650px;
               width: 560px;
               top: -138px;
+            }
+          }
+        }
+
+        .section-secondary-illustration {
+          .premiumfeatures {
+            height: calc(90vw * 1.1);
+            width: 90vw;
+            position: relative;
+            background-size: cover;
+            margin: 0 auto;
+            position: relative;
+            top: -80px;
+            max-width: 450px;
+            max-height: calc(450px * 1.11);
+            margin-bottom: -24px;
+            background-image: url("./svgs/premiumfeatures.svg");
+
+            @media #{$mq-small-desktop-and-up} {
+              height: calc(450px * 1.11);
+              width: 450px;
+              left: -10px;
+              top: -66px;
+              position: relative;
+              background-size: cover;
+
+              overflow: visible;
+            }
+
+            @media #{$mq-large-desktop-and-up} {
+              height: 464px;
+              width: 417px;
+              top: -78px;
+            }
+          }
+        }
+
+        .section-secondary-content {
+          @media #{$mq-small-desktop-and-up} {
+            display: flex;
+            align-items: flex-start;
+            flex-direction: column;
+            justify-content: center;
+            margin-top: -151px;
+
+            @media #{$mq-large-desktop-and-up} {
+              margin-top: -146px;
             }
           }
         }
@@ -688,7 +699,7 @@
         }
 
         button {
-          background: #30d8a7;
+          background: $gradient-secondary;
           border: none;
           color: white;
           padding: 12px 18px 10px 18px;
@@ -707,7 +718,7 @@
         }
 
         button:hover {
-          background: #1ea57f;
+          background: #5b3cc2;
           cursor: pointer;
         }
 
