Fix :active state for links.

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -108,6 +108,10 @@ a.new {
       &:focus {
         text-decoration: underline;
       }
+
+      &:active {
+        color: $text-color-inverted;
+      }
     }
   }
 
