--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -774,4 +774,15 @@
       }
     }
   }
+
+  .codepen {
+    height: 265px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid;
+    margin: 1em 0;
+    padding: 1em;
+  }
 }
