--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -1,6 +1,4 @@
-@import "~@mdn/minimalist/sass/vars/color-palette";
 @import "~@mdn/minimalist/sass/vars/layout";
-@import "~@mdn/minimalist/sass/vars/typography";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 
 .page-content-container.plus {
@@ -43,6 +41,8 @@
       bottom: 0px;
       width: 100%;
       z-index: 1000;
+      text-decoration: none;
+      text-align: center;
 
       @media #{$mq-tablet-and-up} {
         display: none;
@@ -156,26 +156,26 @@
             display: block;
           }
         }
+      }
 
-        button {
-          background: $gradient-secondary;
-          border: none;
-          color: white;
-          padding: 18px 32px 16px 32px;
-          text-align: center;
-          text-decoration: none;
-          display: inline-block;
-          font-size: 16px;
-          font-family: "Metropolis";
-          font-weight: 400;
-          margin-top: 24px;
-          border-radius: 0px;
-        }
+      .button {
+        background: $gradient-secondary;
+        border: none;
+        color: white;
+        padding: 18px 32px 16px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        font-family: "Metropolis";
+        font-weight: 400;
+        margin-top: 24px;
+        border-radius: 0px;
+      }
 
-        button:hover {
-          background: #008c95;
-          cursor: pointer;
-        }
+      .button:hover {
+        background: #008c95;
+        cursor: pointer;
       }
 
       .header-illustration {
@@ -380,7 +380,7 @@
           background-size: cover;
           margin: 0 auto;
           position: relative;
-          top: -74px;
+          top: -69px;
           max-width: 450px;
           max-height: calc(450px * 1.15);
           margin-bottom: -24px;
@@ -742,7 +742,7 @@
           cursor: pointer;
         }
 
-        input {
+        input[type="email"] {
           width: 90%;
           height: 30px;
           padding: 1px 8px;
@@ -767,22 +767,12 @@
           }
         }
       }
-
-      .survey {
-        padding-top: 0px;
-        margin-top: -20px;
-      }
     }
   }
 
   .codepen {
-    height: 265px;
     box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid;
-    margin: 1em 0;
-    padding: 1em;
+    height: 450px;
+    border: none;
   }
 }
