--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -50,7 +50,7 @@
     }
 
     .mobile-cta:hover {
-      background: #008c95;
+      background: #5b3cc2;
       cursor: pointer;
     }
 
@@ -175,7 +175,7 @@
       }
 
       .button:hover {
-        background: #008c95;
+        background: #5b3cc2;
         cursor: pointer;
       }
 
@@ -352,10 +352,10 @@
         }
 
         p {
-          font-size: clamp(15px, calc(2vw * 0.6), 18px);
+          font-size: clamp(15px, calc(2vw * 0.5), 18px);
 
           @media #{$mq-large-desktop-and-up} {
-            font-size: clamp(17px, calc(2vw * 0.6), 18px);
+            font-size: clamp(16px, calc(2vw * 0.6), 18px);
           }
 
           b {
@@ -404,10 +404,10 @@
             padding-left: 20px;
             font-style: italic;
             font-weight: 300;
-            font-size: clamp(15px, calc(2vw * 0.6), 18px);
+            font-size: clamp(15px, calc(2vw * 0.55), 18px);
 
             @media #{$mq-large-desktop-and-up} {
-              font-size: clamp(17px, calc(2vw * 0.6), 18px);
+              font-size: clamp(16px, calc(2vw * 0.6), 18px);
             }
           }
 
@@ -737,7 +737,7 @@
           margin: 0px;
         }
 
-        button {
+        .button {
           background: $gradient-secondary;
           border: none;
           color: white;
@@ -766,9 +766,14 @@
           height: 30px;
           padding: 1px 8px;
           margin: 24px 0px;
+
           @media #{$mq-tablet-and-up} {
             width: 390px;
             margin-top: inherit;
+          }
+
+          @media #{$mq-small-desktop-and-up} {
+            margin: 24px 0px;
           }
         }
 
