Generate clickable anchor links for the `htmlattrdef` macro. (#3428)
* Generate clickable anchor links for the htmlattrdef macro.

* Change links to show underline only on hover.

* Change <strong> to <b> as it is more appropriate.

* Fix :active state for links.

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -88,6 +88,23 @@ a.new {
         background-color: transparent;
       }
     }
+
+    &[id^="attr-"] {
+      &:link,
+      &:visited {
+        color: $neutral-100;
+        text-decoration: none;
+      }
+
+      &:hover,
+      &:focus {
+        text-decoration: underline;
+      }
+
+      &:active {
+        color: $text-color-inverted;
+      }
+    }
   }
 
   h2,
