--- a/client/src/ui/molecules/search/index.scss
+++ b/client/src/ui/molecules/search/index.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @import "~@mdn/minimalist/sass/vars/color-palette";
 @import "~@mdn/minimalist/sass/vars/layout";
 @import "~@mdn/minimalist/sass/vars/typography";
@@ -18,7 +20,7 @@
     width: 100%;
 
     @media #{$mq-tablet-and-up} {
-      margin: ($base-spacing / 2) 0;
+      margin: math.div($base-spacing, 2) 0;
       min-width: 80px;
     }
 
