--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-icons.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-icons.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .bc-icons {
   display: inline-block;
   vertical-align: text-top;
@@ -10,8 +12,8 @@
     display: inline-block;
     height: $base-unit * 3;
     line-height: 1;
-    margin-left: $base-unit / 1.2;
-    margin-right: $base-unit / 1.5;
+    margin-left: math.div($base-unit, 1.2);
+    margin-right: math.div($base-unit, 1.5);
     width: $base-unit * 3;
   }
 }
