--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-legend.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-legend.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .bc-legend {
   margin: ($base-spacing * 2) 0;
 
@@ -27,7 +29,7 @@
     }
 
     dt {
-      margin-right: $base-spacing / 2;
+      margin-right: math.div($base-spacing, 2);
       vertical-align: middle;
     }
   }
