--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-platforms.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-platforms.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .bc-platforms {
   th {
     border-bottom: 2px solid $neutral-100;
@@ -24,7 +26,7 @@
       content: "";
       display: inline-block;
       height: 24px;
-      margin-top: $base-spacing / 2;
+      margin-top: math.div($base-spacing, 2);
       width: 24px;
     }
   }
