--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .bc-table {
   background-color: $neutral-550;
   border: 0;
@@ -51,7 +53,7 @@
   }
 
   .bc-table-row-header {
-    padding: ($base-spacing / 2) ($base-spacing / 4);
+    padding: math.div($base-spacing, 2) math.div($base-spacing, 4);
 
     code {
       text-decoration: none;
@@ -86,7 +88,7 @@
         border-right: 1px solid $neutral-100;
         display: table-cell;
         overflow: hidden;
-        padding: ($base-spacing / 2) $base-unit;
+        padding: math.div($base-spacing, 2) $base-unit;
         text-align: center;
         vertical-align: middle;
       }
@@ -103,7 +105,7 @@
 
   .bc-browser-name {
     display: inline-block;
-    padding: $base-spacing / 4;
+    padding: math.div($base-spacing, 4);
     width: 75%;
 
     @media #{$mq-small-desktop-and-up} {
