--- a/client/src/document/molecules/_breadcrumb-locale-container.scss
+++ b/client/src/document/molecules/_breadcrumb-locale-container.scss
@@ -1,8 +1,10 @@
+@use "sass:math";
+
 .breadcrumb-locale-container {
   align-items: center;
   background-color: $neutral-550;
   display: flex;
-  padding: ($base-spacing / 2) $base-spacing;
+  padding: math.div($base-spacing, 2) $base-spacing;
 
   @media #{$mq-small-desktop-and-up} {
     margin: $base-spacing 0 0;
