--- a/client/src/document/organisms/sidebar/index.scss
+++ b/client/src/document/organisms/sidebar/index.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @import "~@mdn/minimalist/sass/vars/color-palette";
 @import "~@mdn/minimalist/sass/vars/layout";
 @import "~@mdn/minimalist/sass/vars/typography";
@@ -20,14 +22,14 @@
     ol,
     ul {
       @media #{$mq-tablet-and-up} {
-        padding-left: $base-spacing / 2;
+        padding-left: math.div($base-spacing, 2);
       }
     }
   }
 
   summary,
   li {
-    margin-bottom: $base-spacing / 2;
+    margin-bottom: math.div($base-spacing, 2);
   }
 
   a {
