--- a/client/src/ui/molecules/breadcrumbs/index.scss
+++ b/client/src/ui/molecules/breadcrumbs/index.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @import "~@mdn/minimalist/sass/mixins/utils";
 @import "~@mdn/minimalist/sass/mixins/links";
 
@@ -7,7 +9,7 @@
 
 .breadcrumbs-container {
   @media #{$mq-small-desktop-and-up} {
-    padding: ($base-spacing / 2) $base-spacing;
+    padding: math.div($base-spacing, 2) $base-spacing;
   }
 
   @media #{$mq-small-desktop-and-up} {
@@ -57,7 +59,7 @@
 
     [property="name"] {
       display: inline-block;
-      margin: 0 ($base-unit / 2);
+      margin: 0 math.div($base-unit, 2);
     }
 
     .breadcrumb-penultimate {
@@ -68,7 +70,7 @@
         content: "";
         display: inline-block;
         height: 16px;
-        margin-right: $base-spacing / 4;
+        margin-right: math.div($base-spacing, 4);
         transform: rotate(-90deg);
         width: 16px;
 
