--- a/client/src/ui/molecules/home-hero/index.scss
+++ b/client/src/ui/molecules/home-hero/index.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @import "~@mdn/minimalist/sass/mixins/utils";
 @import "~@mdn/minimalist/sass/vars/color-palette";
 @import "~@mdn/minimalist/sass/vars/layout";
@@ -77,7 +79,7 @@
     border-bottom: 2px solid $neutral-100;
     color: $neutral-100;
     display: inline-block;
-    padding: ($base-spacing / 2) 0;
+    padding: math.div($base-spacing, 2) 0;
     width: 100%;
 
     &::after {
