--- a/client/src/ui/molecules/language-toggle/index.scss
+++ b/client/src/ui/molecules/language-toggle/index.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @import "~@mdn/minimalist/sass/mixins/utils";
 @import "~@mdn/minimalist/sass/vars/color-palette";
 @import "~@mdn/minimalist/sass/vars/layout";
@@ -51,7 +53,7 @@ ul.language-toggle {
     &::after {
       content: "|";
       display: inline-block;
-      margin: 0 $base-spacing / 4;
+      margin: 0 math.div($base-spacing, 4);
     }
   }
 
