--- a/client/src/ui/organisms/header/index.scss
+++ b/client/src/ui/organisms/header/index.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @import "~@mdn/minimalist/sass/vars/color-palette";
 @import "~@mdn/minimalist/sass/vars/layout";
 
@@ -37,7 +39,7 @@
   @media #{$mq-tablet-and-up} {
     display: flex;
     flex-flow: column;
-    padding-bottom: ($base-spacing / 2);
+    padding-bottom: math.div($base-spacing, 2);
   }
 
   @media #{$mq-large-desktop-and-up} {
