--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -179,6 +179,20 @@ a.new {
   iframe:not(.sample-code-frame) {
     border: 0;
   }
+
+  /*
+   * Used in sidebars and in indexes which are both lists of links.
+   */
+  .sidebar .icon-experimental,
+  .index .icon-experimental,
+  .sidebar .icon-nonstandard,
+  .index .icon-nonstandard {
+    color: $primary-50;
+  }
+  .sidebar .icon-deprecated,
+  .index .icon-deprecated {
+    color: $red-100;
+  }
 }
 
 /*
