--- a/client/src/plus/landing-page-survey/index.scss
+++ b/client/src/plus/landing-page-survey/index.scss
@@ -1,13 +1,49 @@
 form.landing-page-survey {
-  padding: 40px;
-  border: 1px solid #efefef;
-
-  .form-element.price label {
-    display: inline-block;
+  .survey {
+    text-align: left;
+    line-height: 250%;
   }
-
   .thank-you {
     font-size: 120%;
     font-weight: bold;
+  }
+
+  .features {
+    text-align: left;
+    line-height: 250%;
+
+    h6 {
+      font-size: 18px;
+      font-weight: 500;
+      margin: 18px 0px;
+    }
+
+    input[type="checkbox"] {
+      margin: 0px;
+      margin-right: 18px;
+    }
+
+    button {
+      margin-left: 0px;
+      background: #8565ff;
+      border: none;
+      color: white;
+      padding: 18px 32px 16px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      font-family: "Metropolis";
+      font-weight: 400;
+      margin-top: 24px;
+      width: fit-content;
+      border-radius: 0px;
+    }
+
+    textarea {
+      padding: 10px;
+      width: 100%;
+      box-sizing: border-box;
+    }
   }
 }
