--- a/client/src/ui/organisms/footer/index.scss
+++ b/client/src/ui/organisms/footer/index.scss
@@ -12,6 +12,8 @@
   background-color: $neutral-100;
   color: $text-color-inverted;
   padding: ($base-spacing * 2) $base-spacing;
+  z-index: $bring-to-front;
+  position: relative;
 
   .content-container {
     margin: 0 auto;
