--- a/client/src/plus/fonts/inter.css
+++ b/client/src/plus/fonts/inter.css
@@ -1,4 +1,7 @@
-/*! Generated with https://google-webfonts-helper.herokuapp.com/fonts/inter?subsets=latin May 2021 */
+/*! Generated with https://google-webfonts-helper.herokuapp.com/fonts/inter?subsets=latin May 2021.
+Inter copyright of The Inter Project Authors (https://github.com/rsms/inter)
+License: SIL Open Font License, 1.1 https://choosealicense.com/licenses/ofl-1.1/
+*/
 
 @font-face {
   font-family: "Inter";
