changed div visibility

--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -532,6 +532,7 @@
           font-weight: 400;
           border-radius: 0px;
           margin: 45px auto 0px;
+          display: block;
         }
 
         button:hover {
