sign-up form nits and copy changes
Part of #3886

--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -790,6 +790,11 @@
           }
         }
 
+        textarea,
+        input[type="email"] {
+          font-family: "Inter";
+        }
+
         ::placeholder {
           font-family: "Inter";
           color: #20113970;
